added remove from calendar + some other stuff....

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WorkoutPlanner</title>
+  <title>FitPals</title>
   <base href="/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
